test/type_inference/negative/type_args2.output
type_args2.impala:5 col 8 - 23: error: could not unify types: expected 'fn(bool, fn(bool))' but found 'fn(bool, fn(i32))'.
